# GoLWasm

./: .gitignore  CMakeLists.txt  README.md  gol.html  gol.js  gol.wasm
cmake/: FindSDL2_ttf.cmake
include/: CMakeLists.txt
include/gameEngine/: controller.hpp  engine.hpp  gameComponent.hpp  scene.hpp
include/gameEngine/SDLWrapper/: color.hpp  eventHandler.hpp  manager.hpp  renderer.hpp  window.hpp
include/gameOfLife/: application.hpp  grid.hpp
include/gameOfLife/components/: cell.hpp  cellManager.hpp  common.hpp  componentList.hpp  componentVariant.hpp  resetButton.hpp  startButton.hpp
include/gameOfLife/components/algorithm/: cellAlgo.hpp
include/gameOfLife/events/: click.hpp  reset.hpp  start.hpp
include/utilities/math/: vector2d.hpp
include/utilities/meta/: typelist.hpp
include/utilities/resource/: watermarkResource.hpp
src/: main.cpp
